[package]
name = "aws_lambda"
version = "0.1.0"
authors = [
  "Sam Rijs <srijs@airpost.net>",
  "Christian Legnitto <christian@legnitto.com>"
]
build = "build.rs"

[features]
# Re-export from events crate.
default = ["string-null-none"]
string-null-empty = ["aws_lambda_events/string-null-empty"]
string-null-none = ["aws_lambda_events/string-null-none"]

[dependencies]
aws_lambda_runtime = { path = "../aws_lambda_runtime" }
aws_lambda_events = { path = "../aws_lambda_events" }
failure = "0.1.1"
futures = "0.1.21"
log = "0.4.1"
serde = "1.0.39"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
