[package]
name = "aws_lambda"
version = "0.1.0"
authors = [
  "Sam Rijs <srijs@airpost.net>",
  "Christian Legnitto <christian@legnitto.com>"
]
build = "build.rs"

[features]
default = ["gateway"]
gateway = ["aws_lambda_gateway"]
gateway_extensions = ["aws_lambda_gateway/extensions"]

[dependencies]
aws_lambda_events = { path = "../aws_lambda_events" }
aws_lambda_gateway = { path = "../aws_lambda_gateway", optional = true }
aws_lambda_runtime = { path = "../aws_lambda_runtime" }
failure = "0.1.1"
futures = "0.1.21"
log = "0.4.1"
serde = "1.0.39"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
