[package]
name = "aws_lambda_cargo"
version = "0.1.0"
authors = [
  "Christian Legnitto <christian@legnitto.com>",
  "Sam Rijs <srijs@airpost.net>",
]
license = "MIT OR Apache-2.0"
description = "Cargo subcommand for AWS Lambda"
keywords = ["subcommand", "cargo", "lambda", "aws", "aws lambda"]
repository = "https://github.com/srijs/rust-aws-lambda"
homepage = "https://github.com/srijs/rust-aws-lambda"

[[bin]]
name = "cargo-lambda"
path = "src/main.rs"

[build-dependencies]
askama = "0.7.1"

[dependencies]
serde_json = "1.0.24"
structopt = "0.2.10"
clap = "2.32.0"
failure = "0.1.1"
rustc_version = "0.2.3"
askama = "0.7.1"
cargo_metadata = { git = "https://github.com/LegNeato/cargo_metadata",  branch = "as_ref" }
pretty_env_logger = "0.2"
log = "0.4.3"
tempfile = "3.0.3"
indicatif = "0.9.0"
console = "0.6.1"
users = "0.7.0"
duct = "0.11.0"
