[package]
name = "aws_lambda_events"
version = "0.1.0"
authors = [
  "Christian Legnitto <christian@legnitto.com>",
  "Sam Rijs <srijs@airpost.net>"
]

[features]
default = ["string-null-none"]
# Handle JSON `null` as an empty value in `String`.
string-null-empty = []
# Handle JSON `null` as `None` in an `Option<String>`.
string-null-none = []

[dependencies]
base64 = "0.9.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bytes = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4.4", features = ["serde"] }
pretty_assertions = "0.5.1"
