[package]
name = "aws_lambda_events_codegen"
version = "0.1.1"
authors = ["Christian Legnitto <christian@legnitto.com>"]
publish = false

[dependencies]
quicli = "0.2"
glob = "0.2"
go_to_rust = { path = "./go_to_rust" }
# Needed to pick up a bunch of changes.
codegen = { git = "https://github.com/LegNeato/codegen.git", branch = "issue-3-and-4-field-documentation-annotation"}
