[package]
name = "aws_lambda_gateway"
version = "0.1.0"
authors = [
  "Sam Rijs <srijs@airpost.net>",
  "Christian Legnitto <christian@legnitto.com>"
]
workspace = ".."

[features]
default = ["extensions"]

[dependencies]
base64 = "0.9.2"
failure = "0.1.1"
futures = "0.1.21"
http = "0.1.5"
serde = "1.0.39"
serde_derive = "1.0.42"
serde_json = "1.0.18"
tower-service = "0.1.0"
