[package]
name = "aws_lambda_runtime"
version = "0.1.0"
authors = [
  "Sam Rijs <srijs@airpost.net>",
  "Christian Legnitto <christian@legnitto.com>"
]
workspace = ".."

[dependencies]
backtrace-parser = "0.1.0"
bytes = "0.4.8"
failure = "0.1.1"
futures = "0.1.21"
gob = { git = "https://github.com/srijs/rust-gob" }
lazy_static = "1.0.1"
log = "0.4.1"
scoped-tls = "0.1"
serde = "1.0.39"
serde_bytes = "0.10.4"
serde_derive = "1.0.42"
serde_json = "1.0.18"
serde_schema = { git = "https://github.com/srijs/rust-serde-schema", features = ["bytes"] }
serde_schema_derive = { git = "https://github.com/srijs/rust-serde-schema" }
tokio-core = "0.1.17"
tokio-io = "0.1.6"
tokio-reactor = "0.1.1"
tower-service = "0.1.0"
void = "1.0.2"

[dev-dependencies]
partial-io = { version = "0.3.0", features = ["tokio", "quickcheck"] }
quickcheck = "0.6.2"
